cmake_minimum_required(VERSION 3.29)
project(henuDataStructureHW)

set(CMAKE_CXX_STANDARD 20)

add_executable(henuDataStructureHW
        HW1.cpp
        main.cpp
        HW2.cpp
        HW3.cpp
        HW4.cpp
        HW5.cpp
        HW6.cpp
        HW7.cpp
        myStack.h
        myBiTree.h
        myQueue.h)
